# cargo-features = ["edition2021"]

[package]
name = "agvd"
version = "0.1.0"
authors = ["totodingi <mudakiwilson@yahoo.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
tokio = { version = "1.24.2", features = ["full"] }
serde_json = "1.0.91"